--- a/reg.html
+++ b/reg.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="">
-    <h1>Registration form</h1>
+    <h1>Registration form for an event</h1>
     <label for="name">name:</label>
     <input type="text" id="name" required><br>
     <label for="email">email</label>
