--- a/reg.html
+++ b/reg.html
@@ -8,7 +8,7 @@
 <body>
     <form action="">
     <h1>Registration form for an event</h1>
-    <label for="name">name:</label>
+    <label for="name">FULL Name:</label>
     <input type="text" id="name" required><br>
     <label for="email">email</label>
     <input type="email" id="email" required><br>
